fix(Navbar): smaller padding on mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -94,7 +94,7 @@
 
 @media (max-width: 768px) {
   .dcl.navbar {
-    padding: 0px 32px;
+    padding: 0px 24px;
     margin-bottom: 24px;
   }
 }
